fixed overflow issue in header

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -4,6 +4,7 @@
 	background-size: cover;
 	height: 45rem;
 	overflow-x: hidden;
+	overflow-y: hidden;
 	// container
 	.wrapper {
 		display: flex;
