--- a/styles/styles.css
+++ b/styles/styles.css
@@ -532,6 +532,7 @@ ul {
   background-size: cover;
   height: 45rem;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 .home-header .wrapper {
   display: -webkit-box;
